backend/merchant_backend/src/main/java/com/example/merchant/domain/parking/error/MultipleNotPaidException.java
package com.example.merchant.domain.parking.error;

public class MultipleNotPaidException extends RuntimeException {

    public MultipleNotPaidException() {
        super("Multiple not paid parking");
    }

    public MultipleNotPaidException(String message) {
        super(message);
    }

    @Override
    public synchronized Throwable fillInStackTrace() {
        return this;
    }
}
